--- a/data.html
+++ b/data.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 
+  
   <!---------------------Navbar--------------------->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <i class="far fa-lightbulb inline mr-3"></i>
@@ -105,7 +106,7 @@
                             <i class="far fa-address-card mr-2"></i>
                             <h5 class="font-weight-bold">Specialty</h5>
                         </div>
-                        <p>Farming/Produce</p>
+                        <p>Agriculture</p>
                         <div class="btn-group btn-group-toggle mb-2" data-toggle="buttons">
                             <label class="btn btn-x">
                                 <input type="radio" name="options" id="option1">Show
@@ -401,7 +402,7 @@
     </div>
 
     <!------------------Footer------------------>
-<footer class="page-footer font-small pt-4">
+<footer class="page-footer font-small pt-4 mt-5">
     <div class="container-fluid text-center text-md-left">
       <div class="row">
         <div class="col-md-6 mt-md-0 mt-3">
