--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                     <p class="strong">Friday at 9:00pm</p>
                   </div>
                 </div>
+                
                 <div class="post-top-header-right">
                   <i class="far fa-bookmark mr-2"></i>
                 </div>
@@ -351,7 +352,7 @@
 
 
 <!------------------Footer------------------>
-<footer class="page-footer font-small pt-4">
+<footer class="page-footer font-small pt-4 mt-5">
   <div class="container-fluid text-center text-md-left">
     <div class="row">
       <div class="col-md-6 mt-md-0 mt-3">
