--- a/data.html
+++ b/data.html
@@ -328,22 +328,22 @@
                     <div class="row data-dist-row">
                         <div class="col-md data-dist-item">
                             <div class="data-dist-item-img" style="background-image:url('./assets/img/idea_veg_0.jpg');"></div>
-                            <h5>Carrots</h5>
+                            <h5>Corn</h5>
                             <p class="font-weight-bold">20,090 pcs</p>
                         </div>
                         <div class="col-md data-dist-item">
                             <div class="data-dist-item-img" style="background-image:url('./assets/img/idea_veg_1.jpg');"></div>
-                            <h5>Carrots</h5>
+                            <h5>Garlic</h5>
                             <p class="font-weight-bold">20,090 pcs</p>
                         </div>
                         <div class="col-md data-dist-item">
                             <div class="data-dist-item-img" style="background-image:url('./assets/img/idea_veg_2.jpg');"></div>
-                            <h5>Carrots</h5>
+                            <h5>Peppers</h5>
                             <p class="font-weight-bold">20,090 pcs</p>
                         </div>
                         <div class="col-md data-dist-item">
                             <div class="data-dist-item-img" style="background-image:url('./assets/img/idea_veg_3.jpg');"></div>
-                            <h5>Carrots</h5>
+                            <h5>Blueberries</h5>
                             <p class="font-weight-bold">20,090 pcs</p>
                         </div>
                     </div>
